# FS3

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml
cmake/: FS3Config.cmake.in
docs/: Doxyfile.in
include/: ConvectionDispersionOperators.hpp  ConvectionDispersionOperators.tpp  EigenDataTypes.hpp  Logger.hpp  PhysicalConstants.hpp  Process.hpp  Solver.hpp
include/Components/: Component.hpp  ComponentSystem.hpp  ComponentSystem.tpp
include/Observers/: NumpyIO.hpp  PHConverter.hpp  SnapshotObserver.hpp  TimeSeriesObserver.hpp
include/Reactions/: ActivityModels.hpp  GouyChapman.hpp  Langmuir.hpp  MassActionLaw.hpp  OneCellReaction.hpp  Reaction.hpp  ReactionSystem.hpp  ReactionSystem.tpp
include/UnitOperations/: Inlet.hpp  Outlet.hpp  Pipe.hpp  RS_MagneticCaptureProcessChamber.hpp  UnitOperationBase.hpp  Volume.hpp
python/: bindings.cpp  fs3.pyi
python/examples/: simple_pipe.py
scripts/: build.sh  docs.sh  install.sh  recompile.sh
src/: CMakeLists.txt  Process.cpp
src/Components/: Component.cpp  ComponentSystem.cpp
src/Observers/: NumpyIO.cpp  PHConverter.cpp  SnapshotObserver.cpp  TimeSeriesObserver.cpp
src/Reactions/: ActivityModels.cpp  GouyChapman.cpp  Langmuir.cpp  MassActionLaw.cpp  OneCellReaction.cpp  Reaction.cpp  ReactionSystem.cpp
src/Solver/: SolverConstruction.cpp  SolverRhs.cpp  SolverSolving.cpp
src/UnitOperations/: Inlet.cpp  Outlet.cpp  Pipe.cpp  RS_MagneticCaptureProcessChamber.cpp  Volume.cpp
